--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-index.html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Buzzbar</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header>
+    <h1>Welcome to Buzzbar</h1>
+    <p>Serving you digital style and good vibes ✨</p>
+  </header>
+
+  <main>
+    <section>
+      <h2>About Buzzbar</h2>
+      <p>We’re building something exciting — stay tuned for more!</p>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2025 Buzzbar</p>
+  </footer>
+</body>
+</html>
