--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <h1>Welcome to Buzzbar</h1>
-    <p>Serving you digital style and good vibes ✨</p>
+    <p>Creating natural energy and nutritional value ✨</p>
   </header>
 
   <main>
