--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Buzzbar – Natural Energy</title>
-  <link rel="stylesheet" href="style.css?v=2" />
+  <link rel="stylesheet" href="style.css?v=3" />
 </head>
 <body>
 
@@ -16,6 +16,7 @@
         <li><a href="#products">Products</a></li>
         <li><a href="#science">Science</a></li>
         <li><a href="#story">Our Story</a></li>
+        <li><a href="#founders">Founders</a></li>
         <li><a href="#contact" class="nav-cta">Contact</a></li>
       </ul>
     </div>
@@ -23,24 +24,25 @@
 
   <!-- Hero -->
   <header class="hero" id="home">
-    <div class="hero-background"></div>
     <div class="hero-container">
       <div class="hero-content">
-        <span class="hero-badge">New</span>
+        <span class="hero-badge">NEW</span>
         <h1 class="hero-title">Clean, steady energy — without the crash.</h1>
         <p class="hero-subtitle">Buzzbar combines natural ingredients with smart nutrition.</p>
         <div class="hero-actions">
           <a href="#products" class="cta-primary">See Products</a>
-          <a href="#science" class="cta-secondary">How it works</a>
+          <a href="#science" class="cta-secondary">Learn More</a>
         </div>
       </div>
-      <div class="hero-stats">
-        <div><strong>0g</strong><span>Added sugar</span></div>
-        <div><strong>10g</strong><span>Protein</span></div>
-        <div><strong>Vegan</strong><span>Friendly</span></div>
-      </div>
+      <img src="https://via.placeholder.com/500x400" alt="Buzzbar" class="hero-img">
     </div>
   </header>
+
+  <!-- CTA Banner -->
+  <section class="cta-banner">
+    <h2>Get your buzz on — the clean way.</h2>
+    <a href="#products" class="cta-primary">Shop Now</a>
+  </section>
 
   <!-- Products -->
   <section id="products" class="products-section">
@@ -51,48 +53,22 @@
         <p class="section-subtitle">Energy, Focus, and Recovery blends.</p>
       </div>
 
-      <div class="products-carousel">
-        <article class="product-card">
-          <div class="product-visual"><img src="https://via.placeholder.com/320x220" alt="Energy Bar"></div>
-          <div class="product-info">
-            <h3>Energy</h3>
-            <p class="product-tagline">Bright, uplifting, sustained.</p>
-            <ul class="product-specs">
-              <li>Green tea caffeine</li>
-              <li>B-vitamins</li>
-              <li>Electrolytes</li>
-            </ul>
-            <a class="cta-primary" href="#">Buy now</a>
-          </div>
-        </article>
-
-        <article class="product-card">
-          <div class="product-visual"><img src="https://via.placeholder.com/320x220" alt="Focus Bar"></div>
-          <div class="product-info">
-            <h3>Focus</h3>
-            <p class="product-tagline">Calm clarity to get things done.</p>
-            <ul class="product-specs">
-              <li>L-theanine</li>
-              <li>Lion’s mane</li>
-              <li>Magnesium</li>
-            </ul>
-            <a class="cta-primary" href="#">Buy now</a>
-          </div>
-        </article>
-
-        <article class="product-card">
-          <div class="product-visual"><img src="https://via.placeholder.com/320x220" alt="Recovery Bar"></div>
-          <div class="product-info">
-            <h3>Recovery</h3>
-            <p class="product-tagline">Rebuild and recharge.</p>
-            <ul class="product-specs">
-              <li>10g plant protein</li>
-              <li>Electrolytes</li>
-              <li>Vitamin C & E</li>
-            </ul>
-            <a class="cta-primary" href="#">Buy now</a>
-          </div>
-        </article>
+      <div class="products-grid">
+        <div class="product-card">
+          <img src="https://via.placeholder.com/250x200" alt="Energy Bar">
+          <h3>Energy</h3>
+          <p>Bright, uplifting, sustained.</p>
+        </div>
+        <div class="product-card">
+          <img src="https://via.placeholder.com/250x200" alt="Focus Bar">
+          <h3>Focus</h3>
+          <p>Clarity and calm to get things done.</p>
+        </div>
+        <div class="product-card">
+          <img src="https://via.placeholder.com/250x200" alt="Recovery Bar">
+          <h3>Recovery</h3>
+          <p>Rebuild and recharge.</p>
+        </div>
       </div>
     </div>
   </section>
@@ -128,18 +104,50 @@
     </div>
   </section>
 
-  <!-- Contact / Footer -->
-  <footer id="contact">
-    <div class="footer-content container">
-      <div>
-        <h3>Buzzbar</h3>
-        <p>Clean energy, smarter nutrition.</p>
+  <!-- Founders -->
+  <section id="founders" class="founders-section">
+    <div class="container">
+      <div class="section-header">
+        <span class="section-badge">Founders</span>
+        <h2>Meet the team behind Buzzbar</h2>
       </div>
-      <div>
-        <h4>Get in touch</h4>
-        <p><a href="mailto:hello@buzzbar.se">hello@buzzbar.se</a></p>
+      <div class="founders-grid">
+        <div class="founder-card">
+          <img src="https://via.placeholder.com/200" alt="Founder 1" class="founders-photo">
+          <h3>Tom</h3>
+          <p>Co-founder & product enthusiast</p>
+        </div>
+        <div class="founder-card">
+          <img src="https://via.placeholder.com/200" alt="Founder 2" class="founders-photo">
+          <h3>Felix</h3>
+          <p>Co-founder & design mastermind</p>
+        </div>
       </div>
     </div>
+  </section>
+
+  <!-- Socials -->
+  <section class="socials-section">
+    <div class="container">
+      <h2>Follow us</h2>
+      <div class="socials-links">
+        <a href="#">Instagram</a>
+        <a href="#">TikTok</a>
+        <a href="#">LinkedIn</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact -->
+  <section id="contact" class="contact-section">
+    <div class="container">
+      <h2>Contact us</h2>
+      <p>Email us at <a href="mailto:hello@buzzbar.se">hello@buzzbar.se</a></p>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer>
     <div class="footer-bottom">© 2025 Buzzbar</div>
   </footer>
 
