--- a/index.html
+++ b/index.html
@@ -351,82 +351,52 @@
   </section>
 
   <!-- ===== STORY / FOUNDERS ===== -->
-  <section id="story" class="story-section">
-    <div class="container story-content">
-      <div class="section-header">
-        <span class="section-badge">Our Story</span>
-        <h2>Built for real life</h2>
-        <p class="section-subtitle">Replacing crashy snacks with something smarter.</p>
-      </div>
-
-      <div class="story-grid">
-        <div class="story-text">
-          <div class="story-intro">
-            <h3>Why Buzzbar?</h3>
-            <p>We wanted clean, convenient energy that actually feels good.</p>
-          </div>
-          <div class="story-journey">
-            <h3>The journey</h3>
-            <p>Hundreds of iterations, lots of tastings, and research with dietitians.</p>
-          </div>
-
-          <div class="story-values">
-            <div class="value-item">
-              <div class="value-icon">✅</div>
-              <div>
-                <h4>Quality first</h4>
-                <p>We source clean, traceable ingredients.</p>
-              </div>
-            </div>
-            <div class="value-item">
-              <div class="value-icon">😋</div>
-              <div>
-                <h4>Taste matters</h4>
-                <p>Balanced flavor with no aftertaste.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <aside class="story-visual">
-          <div class="founders-section" id="founders">
-            <div class="founder-card">
-              <div class="founder-image">
-                <div class="founder-placeholder"><span class="founder-initials">TM</span></div>
-              </div>
-              <div class="founder-info">
-                <h4>Tom</h4>
-                <div class="founder-title">Co-Founder</div>
-                <blockquote>“Build something we want to use daily.”</blockquote>
-              </div>
-            </div>
-
-            <div class="founder-card">
-              <div class="founder-image">
-                <div class="founder-placeholder"><span class="founder-initials">FX</span></div>
-              </div>
-              <div class="founder-info">
-                <h4>Felix</h4>
-                <div class="founder-title">Co-Founder</div>
-                <blockquote>“No jitters. No crash. Great taste.”</blockquote>
-              </div>
-            </div>
-          </div>
-
-          <div class="story-stats">
-            <div class="stat-item">
-              <span class="stat-number">500+</span>
-              <span class="stat-label">Taste tests</span>
-            </div>
-            <div class="stat-item">
-              <span class="stat-number">12</span>
-              <span class="stat-label">Iterations</span>
-            </div>
-          </div>
-        </aside>
-      </div>
+  <div class="founders-section" id="founders">
+  <div class="founder-card">
+    <div class="founder-image">
+      <div class="founder-placeholder"><span class="founder-initials">TM</span></div>
     </div>
-  </section>
+    <div class="founder-info">
+      <h4>Tom</h4>
+      <div class="founder-title">Co-Founder</div>
+      <blockquote>“Build something we want to use daily.”</blockquote>
+    </div>
+  </div>
+
+  <div class="founder-card">
+    <div class="founder-image">
+      <div class="founder-placeholder"><span class="founder-initials">FX</span></div>
+    </div>
+    <div class="founder-info">
+      <h4>Felix</h4>
+      <div class="founder-title">Co-Founder</div>
+      <blockquote>“No jitters. No crash. Great taste.”</blockquote>
+    </div>
+  </div>
+
+  <div class="founder-card">
+    <div class="founder-image">
+      <div class="founder-placeholder"><span class="founder-initials">OL</span></div>
+    </div>
+    <div class="founder-info">
+      <h4>Oliver</h4>
+      <div class="founder-title">Co-Founder</div>
+      <blockquote>“Good energy should feel effortless.”</blockquote>
+    </div>
+  </div>
+
+  <div class="founder-card">
+    <div class="founder-image">
+      <div class="founder-placeholder"><span class="founder-initials">CH</span></div>
+    </div>
+    <div class="founder-info">
+      <h4>Charlie</h4>
+      <div class="founder-title">Co-Founder</div>
+      <blockquote>“We’re redefining what healthy energy tastes like.”</blockquote>
+    </div>
+  </div>
+</div>
+
 
   <!-- ===== FOOTER ===== -->
   <footer>
