--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <!-- Waitlist form -->
         <form class="waitlist-form" action="https://formspree.io/f/your-id" method="POST">
           <input type="email" name="email" placeholder="Enter your email" required class="waitlist-input" />
-          <button type="submit" class="cta-primary">Join the waitlist</button>
+          <a href="#signup" class="cta-primary">Join the waitlist</a>
         </form>
 
         <!-- (Optional) social proof line -->
@@ -124,7 +124,22 @@
       <button type="submit" class="cta-primary">Get launch updates</button>
     </form>
   </section>
+  <!-- ===== SIGN UP SECTION ===== -->
+  <section id="signup" class="signup-section">
+    <div class="container">
+      <div class="section-header">
+        <span class="section-badge">Get Early Access</span>
+        <h2>Join the Buzzbar launch list</h2>
+        <p>We’ll email you when we launch — and you’ll get early access + exclusive launch discounts.</p>
+      </div>
 
+      <form class="signup-form" action="https://formspree.io/f/your-id" method="POST">
+        <input type="email" name="email" placeholder="Enter your email" required class="signup-input" />
+        <button type="submit" class="cta-primary">Sign up</button>
+      </form>
+    </div>
+  </section>
+  
   <footer>
     <div class="container footer-content">
       <div class="footer-section">
@@ -138,6 +153,7 @@
     </div>
     <div class="footer-bottom">© 2025 Buzzbar</div>
   </footer>
+
 </body>
 
 </html>
