--- a/index.html
+++ b/index.html
@@ -31,67 +31,64 @@
 
   <!-- ===== HERO ===== -->
   <section class="hero" id="home">
-    <div class="hero-background"></div>
-    <div class="hero-video-overlay"></div>
+  <!-- Soft gradient backdrop -->
+  <div class="hero-background"></div>
 
-    <div class="hero-container container">
-      <div class="hero-content">
-        <span class="hero-badge">New</span>
-        <h1 class="hero-title">
-          <span class="title-line">Clean, steady energy</span>
-          <span class="title-line highlight">without the crash</span>
-        </h1>
-        <p class="hero-subtitle">
-          Functional bars with green tea caffeine, L-theanine, electrolytes and adaptogens.
-        </p>
+  <div class="hero-container container">
 
-        <div class="hero-actions">
-          <a href="#products" class="cta-primary">See Products</a>
-          <a href="#science" class="cta-secondary">How it works</a>
+    <!-- LEFT: copy + CTAs -->
+    <div class="hero-content">
+      <span class="hero-badge">Pre-release</span>
+
+      <h1 class="hero-title">
+        <span class="title-line">Clean, steady energy</span>
+        <span class="title-line highlight">without the crash</span>
+      </h1>
+
+      <p class="hero-subtitle">
+        Functional bars powered by green tea caffeine, L-theanine, electrolytes and adaptogens.
+      </p>
+
+      <div class="hero-actions">
+        <a href="#products" class="cta-primary">See Products</a>
+        <a href="#science" class="cta-secondary">How it works</a>
+      </div>
+
+      <!-- Trust row: keep it minimal & student-focused -->
+      <div class="hero-trust">
+        <div class="trust-item">
+          <span class="trust-dot"></span> Built for students & creators
         </div>
-
-        <div class="hero-stats">
-          <div class="stat">
-            <span class="stat-number">0g</span>
-            <span class="stat-label">Added Sugar</span>
-          </div>
-          <div class="stat">
-            <span class="stat-number">10g</span>
-            <span class="stat-label">Protein</span>
-          </div>
-          <div class="stat">
-            <span class="stat-number">Vegan</span>
-            <span class="stat-label">Friendly</span>
-          </div>
+        <div class="trust-item">
+          <span class="trust-dot"></span> No jitters · No crash
+        </div>
+        <div class="trust-item">
+          <span class="trust-dot"></span> Plant-based ingredients
         </div>
       </div>
 
-      <div class="hero-visual">
-        <div class="product-showcase">
-          <div class="product-bars">
-            <div class="protein-bar bar-energy"></div>
-            <div class="protein-bar bar-focus"></div>
-            <div class="protein-bar bar-recovery"></div>
-          </div>
-
-          <div class="floating-elements">
-            <div class="element element-1">⚡</div>
-            <div class="element element-2">✨</div>
-            <div class="element element-3">⚡</div>
-            <div class="element-4">✴︎</div>
-            <div class="element-5">◎</div>
-            <div class="element-6">✦</div>
-          </div>
-
-          <div class="gym-background">
-            <div class="barbell-icon"></div>
-            <div class="dumbbell-icon"></div>
-            <div class="kettlebell-icon"></div>
-          </div>
-        </div>
+      <!-- Stats (small + tidy) -->
+      <div class="hero-stats">
+        <div class="stat"><span class="stat-number">0g</span><span class="stat-label">Added sugar</span></div>
+        <div class="stat"><span class="stat-number">10g</span><span class="stat-label">Protein</span></div>
+        <div class="stat"><span class="stat-number">Vegan</span><span class="stat-label">Friendly</span></div>
       </div>
     </div>
-  </section>
+
+    <!-- RIGHT: simple, premium visual (keeps your abstract bars) -->
+    <div class="hero-visual">
+      <div class="hero-card-stack">
+        <div class="hero-card hc-1"></div>
+        <div class="hero-card hc-2"></div>
+        <div class="hero-card hc-3"></div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Scroll hint -->
+  <a href="#products" class="scroll-hint" aria-label="Scroll to products">▾</a>
+</section>
+
 
   <!-- Nice inline CTA to show .cta-primary styles outside hero -->
   <section class="container" style="padding:40px 0;text-align:center;">
