--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 
       <!-- Stats (small + tidy) -->
       <div class="hero-stats">
-        <div class="stat"><span class="stat-number">0g</span><span class="stat-label">Added sugar</span></div>
-        <div class="stat"><span class="stat-number">10g</span><span class="stat-label">Protein</span></div>
+        <div class="stat"><span class="stat-number">80g</span><span class="stat-label">Clean Caffeine</span></div>
+        <div class="stat"><span class="stat-number">20g</span><span class="stat-label">Protein</span></div>
         <div class="stat"><span class="stat-number">Vegan</span><span class="stat-label">Friendly</span></div>
       </div>
     </div>
