--- a/index.html
+++ b/index.html
@@ -66,8 +66,13 @@
 
     <!-- RIGHT: simple, premium visual (keeps your abstract bars) -->
     <div class="hero-visual">
-      <img src="student-photo.jpg" alt="Students relaxing on campus" class="hero-image">
+      <div class="hero-card-stack">
+        <div class="hero-card hc-1"></div>
+        <div class="hero-card hc-2"></div>
+        <div class="hero-card hc-3"></div>
+      </div>
     </div>
+
 
   
 
