--- a/index.html
+++ b/index.html
@@ -31,55 +31,67 @@
 
   <!-- ===== HERO ===== -->
   <section class="hero" id="home">
-  <!-- Soft gradient backdrop -->
-  <div class="hero-background"></div>
+    <div class="hero-background"></div>
+    <div class="hero-video-overlay"></div>
 
-  <div class="hero-container container">
+    <div class="hero-container container">
+      <div class="hero-content">
+        <span class="hero-badge">New</span>
+        <h1 class="hero-title">
+          <span class="title-line">Clean, steady energy</span>
+          <span class="title-line highlight">without the crash</span>
+        </h1>
+        <p class="hero-subtitle">
+          Functional bars with green tea caffeine, L-theanine, electrolytes and adaptogens.
+        </p>
 
-    <!-- LEFT: copy + CTAs -->
-    <div class="hero-content">
-      <span class="hero-badge">Pre-release</span>
+        <div class="hero-actions">
+          <a href="#products" class="cta-primary">See Products</a>
+          <a href="#science" class="cta-secondary">How it works</a>
+        </div>
 
-      <h1 class="hero-title">
-        <span class="title-line">Clean, steady energy</span>
-        <span class="title-line highlight">without the crash</span>
-      </h1>
-
-      <p class="hero-subtitle">
-        Functional bars powered by green tea caffeine, L-theanine, electrolytes and adaptogens.
-      </p>
-
-      <div class="hero-actions">
-        <a href="#products" class="cta-primary">See Products</a>
-        <a href="#science" class="cta-secondary">How it works</a>
+        <div class="hero-stats">
+          <div class="stat">
+            <span class="stat-number">80g</span>
+            <span class="stat-label">Clean Caffiene</span>
+          </div>
+          <div class="stat">
+            <span class="stat-number">20g</span>
+            <span class="stat-label">Protein</span>
+          </div>
+          <div class="stat">
+            <span class="stat-number">Vegan</span>
+            <span class="stat-label">Friendly</span>
+          </div>
+        </div>
       </div>
 
-    
+      <div class="hero-visual">
+        <div class="product-showcase">
+          <div class="product-bars">
+            <div class="protein-bar bar-energy"></div>
+            <div class="protein-bar bar-focus"></div>
+            <div class="protein-bar bar-recovery"></div>
+          </div>
 
-      <!-- Stats (small + tidy) -->
-      <div class="hero-stats">
-        <div class="stat"><span class="stat-number">80g</span><span class="stat-label">Clean Caffeine</span></div>
-        <div class="stat"><span class="stat-number">20g</span><span class="stat-label">Protein</span></div>
-        <div class="stat"><span class="stat-number">Vegan</span><span class="stat-label">Friendly</span></div>
+          <div class="floating-elements">
+            <div class="element element-1">⚡</div>
+            <div class="element element-2">✨</div>
+            <div class="element element-3">⚡</div>
+            <div class="element-4">✴︎</div>
+            <div class="element-5">◎</div>
+            <div class="element-6">✦</div>
+          </div>
+
+          <div class="gym-background">
+            <div class="barbell-icon"></div>
+            <div class="dumbbell-icon"></div>
+            <div class="kettlebell-icon"></div>
+          </div>
+        </div>
       </div>
     </div>
-
-    <!-- RIGHT: simple, premium visual (keeps your abstract bars) -->
-    <div class="hero-visual">
-      <div class="hero-card-stack">
-        <div class="hero-card hc-1"></div>
-        <div class="hero-card hc-2"></div>
-        <div class="hero-card hc-3"></div>
-      </div>
-    </div>
-
-
-  
-
-  <!-- Scroll hint -->
-  <a href="#products" class="scroll-hint" aria-label="Scroll to products">▾</a>
-</section>
-
+  </section>
 
   <!-- Nice inline CTA to show .cta-primary styles outside hero -->
   <section class="container" style="padding:40px 0;text-align:center;">
