--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
   <!-- ===== NAVBAR ===== -->
   <header>
+    <div class="prelaunch-banner">
+      Buzzbar is in pre-launch mode — join our early access list!
+    </div>
     <nav class="navbar">
       <div class="nav-brand">
         <div class="logo">
