--- a/index.html
+++ b/index.html
@@ -386,6 +386,29 @@
   </div>
 </div>
 
+<!-- ===== OUR STORY SECTION ===== -->
+<section id="our-story" class="our-story">
+  <div class="container">
+    <div class="story-content">
+      <h2>Our Story</h2>
+      <p>
+        We’re a small group of students who wanted a clean, nutritious energy source
+        that fit into our fast-paced lives. We were tired of choosing between coffee jitters, sugary energy drinks,
+        or skipping proper meals altogether. Buzzbar was born from the need for something effortless —
+        a bar you can grab on the run that delivers steady focus and lasting energy, without compromise.
+      </p>
+
+      <p>
+        Every bar is built around real ingredients, natural caffeine, and adaptogens — designed to fuel study sessions,
+        morning meetings, and late-night ideas. No brewing, no crash, no nonsense — just clean energy for people going places.
+      </p>
+    </div>
+
+    <div class="story-visual">
+      <img src="student-photo.jpg" alt="Students enjoying Buzzbar" class="story-image">
+    </div>
+  </div>
+</section>
 
   <!-- ===== FOOTER ===== -->
   <footer>
