--- a/index.html
+++ b/index.html
@@ -350,65 +350,71 @@
     </div>
   </section>
 
-  <!-- ===== STORY / FOUNDERS ===== -->
-  <div class="founders-section" id="founders">
-  <div class="founder-card">
-    <div class="founder-image">
-      <div class="founder-placeholder"><span class="founder-initials">TM</span></div>
-    </div>
-    <div class="founder-info">
-      <h4>Tom</h4>
-      <div class="founder-title">Co-Founder</div>
-      <blockquote>“Build something we want to use daily.”</blockquote>
-    </div>
-  </div>
 
-  <div class="founder-card">
-    <div class="founder-image">
-      <div class="founder-placeholder"><span class="founder-initials">OL</span></div>
-    </div>
-    <div class="founder-info">
-      <h4>Oliver</h4>
-      <div class="founder-title">Co-Founder</div>
-      <blockquote>“Good energy should feel effortless.”</blockquote>
-    </div>
-  </div>
-
-  <div class="founder-card">
-    <div class="founder-image">
-      <div class="founder-placeholder"><span class="founder-initials">CH</span></div>
-    </div>
-    <div class="founder-info">
-      <h4>Charlie</h4>
-      <div class="founder-title">Co-Founder</div>
-      <blockquote>“We’re redefining what healthy energy tastes like.”</blockquote>
-    </div>
-  </div>
-</div>
-
-<!-- ===== OUR STORY SECTION ===== -->
+<!-- ===== OUR STORY (polished) ===== -->
 <section id="our-story" class="our-story">
-  <div class="container">
-    <div class="story-content">
-      <h2>Our Story</h2>
-      <p>
+  <div class="container story-grid">
+
+    <!-- LEFT: copy -->
+    <div class="story-copy">
+      <span class="section-eyebrow">Our Story</span>
+      <h2 class="story-title">
+        Built for busy days.<br>
+        Designed for clean, steady energy.
+      </h2>
+
+      <div class="story-lede">
         We’re a small group of students who wanted a clean, nutritious energy source
-        that fit into our fast-paced lives. We were tired of choosing between coffee jitters, sugary energy drinks,
-        or skipping proper meals altogether. Buzzbar was born from the need for something effortless —
-        a bar you can grab on the run that delivers steady focus and lasting energy, without compromise.
-      </p>
+        that fits into our fast-paced lives—without brewing coffee, chugging energy drinks, or cooking a full meal.
+      </div>
 
-      <p>
-        Every bar is built around real ingredients, natural caffeine, and adaptogens — designed to fuel study sessions,
-        morning meetings, and late-night ideas. No brewing, no crash, no nonsense — just clean energy for people going places.
-      </p>
+      <div class="story-columns">
+        <p><strong>The problem:</strong> we needed focus that lasts, not jitters or a crash. Most options were either sugary,
+          inconvenient, or just didn’t feel good.</p>
+        <p><strong>Our answer:</strong> Buzzbar—real ingredients, natural caffeine, L-theanine, and electrolytes.
+          A bar you can grab on the run that delivers smooth focus and steady energy.</p>
+      </div>
+
+      <ul class="story-highlights">
+        <li><span>⚡</span> No brewing. No crash. No nonsense.</li>
+        <li><span>🌿</span> Plant-based, thoughtful ingredients.</li>
+        <li><span>🎓</span> Built for study sessions, meetings, and late-night ideas.</li>
+      </ul>
     </div>
 
-    <div class="story-visual">
-      <img src="student-photo.jpg" alt="Students enjoying Buzzbar" class="story-image">
-    </div>
+    <!-- RIGHT: image placeholder (drop your team photo later) -->
+    <aside class="story-visual">
+      <!-- Replace src when you have your real team photo -->
+      <img src="team-placeholder.jpg" alt="Buzzbar founders" class="story-image" />
+      <div class="img-caption">Your team photo goes here — 1600×1000 recommended</div>
+    </aside>
+  </div>
+
+  <!-- Founders row (3 cards) -->
+  <div class="container founders-row">
+    <article class="founder-card">
+      <div class="founder-avatar"><span>TM</span></div>
+      <h3>Tom</h3>
+      <p class="role">Co-Founder</p>
+      <blockquote>“Build something we want to use daily.”</blockquote>
+    </article>
+
+    <article class="founder-card">
+      <div class="founder-avatar"><span>FX</span></div>
+      <h3>Felix</h3>
+      <p class="role">Co-Founder</p>
+      <blockquote>“No jitters. No crash. Great taste.”</blockquote>
+    </article>
+
+    <article class="founder-card">
+      <div class="founder-avatar"><span>OL</span></div>
+      <h3>Oliver</h3>
+      <p class="role">Co-Founder</p>
+      <blockquote>“Good energy should feel effortless.”</blockquote>
+    </article>
   </div>
 </section>
+
 
   <!-- ===== FOOTER ===== -->
   <footer>
