--- a/index.html
+++ b/index.html
@@ -386,7 +386,6 @@
     <aside class="story-visual">
       <!-- Replace src when you have your real team photo -->
       <img src="team-placeholder.jpg" alt="Buzzbar founders" class="story-image" />
-      <div class="img-caption">Your team photo goes here — 1600×1000 recommended</div>
     </aside>
   </div>
 
@@ -401,7 +400,7 @@
 
     <article class="founder-card">
       <div class="founder-avatar"><span>FX</span></div>
-      <h3>Felix</h3>
+      <h3>Charlie</h3>
       <p class="role">Co-Founder</p>
       <blockquote>“No jitters. No crash. Great taste.”</blockquote>
     </article>
