--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
       </h2>
 
       <div class="story-lede">
-        We’re a small group of students who wanted a clean, nutritious energy source
+        We are three brothers who wanted a clean, nutritious energy source
         that fits into our fast-paced lives—without brewing coffee, chugging energy drinks, or cooking a full meal.
       </div>
 
