Update founder names and avatars in index.html

--- a/index.html
+++ b/index.html
@@ -392,22 +392,22 @@
   <!-- Founders row (3 cards) -->
   <div class="container founders-row">
     <article class="founder-card">
-      <div class="founder-avatar"><span>TM</span></div>
-      <h3>Tom</h3>
+      <div class="founder-avatar"><span>TW</span></div>
+      <h3>Tom Wiseman</h3>
       <p class="role">Co-Founder</p>
       <blockquote>“Build something we want to use daily.”</blockquote>
     </article>
 
     <article class="founder-card">
-      <div class="founder-avatar"><span>FX</span></div>
-      <h3>Charlie</h3>
+      <div class="founder-avatar"><span>CW</span></div>
+      <h3>Charlie Wiseman</h3>
       <p class="role">Co-Founder</p>
       <blockquote>“No jitters. No crash. Great taste.”</blockquote>
     </article>
 
     <article class="founder-card">
-      <div class="founder-avatar"><span>OL</span></div>
-      <h3>Oliver</h3>
+      <div class="founder-avatar"><span>OW</span></div>
+      <h3>Oliver Wiseman</h3>
       <p class="role">Co-Founder</p>
       <blockquote>“Good energy should feel effortless.”</blockquote>
     </article>
