Add more contact emails in footer section
Added additional contact email addresses to the footer.

--- a/index.html
+++ b/index.html
@@ -431,6 +431,8 @@
       <div class="footer-section">
         <h3>Contact</h3>
         <p><a href="mailto:tomwiseman@buzzbar.se">tomwiseman@buzzbar.se</a></p>
+        <p><a href="mailto:tomwiseman@buzzbar.se">oliverwiseman@buzzbar.se</a></p>
+        <p><a href="mailto:tomwiseman@buzzbar.se">charliewiseman@buzzbar.se</a></p>
         <p>© 2025 Buzzbar</p>
       </div>
 
