--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </header>
 
   <!-- ===== HERO ===== -->
-  <section class="hero" id="home">
+  <section class="hero hero--photo" id="home">
     <div class="hero-background"></div>
     <div class="hero-video-overlay"></div>
 
@@ -62,31 +62,6 @@
           <div class="stat">
             <span class="stat-number">Vegan</span>
             <span class="stat-label">Friendly</span>
-          </div>
-        </div>
-      </div>
-
-      <div class="hero-visual">
-        <div class="product-showcase">
-          <div class="product-bars">
-            <div class="protein-bar bar-energy"></div>
-            <div class="protein-bar bar-focus"></div>
-            <div class="protein-bar bar-recovery"></div>
-          </div>
-
-          <div class="floating-elements">
-            <div class="element element-1">⚡</div>
-            <div class="element element-2">✨</div>
-            <div class="element element-3">⚡</div>
-            <div class="element-4">✴︎</div>
-            <div class="element-5">◎</div>
-            <div class="element-6">✦</div>
-          </div>
-
-          <div class="gym-background">
-            <div class="barbell-icon"></div>
-            <div class="dumbbell-icon"></div>
-            <div class="kettlebell-icon"></div>
           </div>
         </div>
       </div>
