--- a/index.html
+++ b/index.html
@@ -155,104 +155,152 @@
   </section>
 
   <!-- ===== SCIENCE ===== -->
-  <!-- ===== SCIENCE ===== -->
-<section id="science" class="science-section">
-  <div class="container">
-    <div class="section-header">
-      <span class="section-badge">Science</span>
-      <h2>Backed by ingredients that work</h2>
-      <p class="section-subtitle">Clean stimulation, steady focus, no crash. Here’s how we built it.</p>
-    </div>
-
-    <!-- Ingredient cards (simple, not AI-y) -->
-    <div class="ingredients-grid">
-      <article class="ingredient-card">
-        <div class="icon">
-          <!-- tiny inline SVG, no external assets -->
-          <svg viewBox="0 0 24 24" aria-hidden="true"><circle cx="12" cy="12" r="10" fill="url(#g1)"/><defs><linearGradient id="g1" x1="0" y1="0" x2="1" y2="1"><stop stop-color="#8b5cf6"/><stop offset="1" stop-color="#6366f1"/></linearGradient></defs></svg>
-        </div>
-        <h3>Green Tea + L-theanine</h3>
-        <p>Balanced stimulation without jitters. Theanine smooths the lift from natural caffeine.</p>
-        <ul class="facts">
-          <li><strong>Caffeine:</strong> ~80&nbsp;mg from green tea</li>
-          <li><strong>L-theanine:</strong> ~200&nbsp;mg</li>
-        </ul>
-        <small class="note">*Amounts shown are targets during pre-release and may change.</small>
-      </article>
-
-      <article class="ingredient-card">
-        <div class="icon">
-          <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M12 2c3 5-3 7 0 13 3-6-3-8 0-13z" fill="url(#g2)"/><defs><linearGradient id="g2" x1="0" y1="0" x2="1" y2="1"><stop stop-color="#22c55e"/><stop offset="1" stop-color="#06b6d4"/></linearGradient></defs></svg>
-        </div>
-        <h3>Electrolytes</h3>
-        <p>Hydration keeps you steady for longer work sessions.</p>
-        <ul class="facts">
-          <li>Sodium, Potassium, Magnesium</li>
-        </ul>
-      </article>
-
-      <article class="ingredient-card">
-        <div class="icon">
-          <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M5 12c3-6 11-6 14 0-3 6-11 6-14 0z" fill="url(#g3)"/><defs><linearGradient id="g3" x1="0" y1="0" x2="1" y2="1"><stop stop-color="#f59e0b"/><stop offset="1" stop-color="#fbbf24"/></linearGradient></defs></svg>
-        </div>
-        <h3>Adaptogens</h3>
-        <p>Support resilience to stress so focus actually sticks.</p>
-        <ul class="facts">
-          <li>Adaptogen blend (e.g., rhodiola/ashwagandha)</li>
-        </ul>
-      </article>
-    </div>
-
-    <!-- How it works -->
-    <div class="how-it-works">
-      <h3>How it works (the quick version)</h3>
-      <ol class="steps">
-        <li><span>1</span><strong>Lift:</strong> Natural caffeine wakes up adenosine-fog without the spike.</li>
-        <li><span>2</span><strong>Smooth:</strong> L-theanine modulates the lift → calm focus, not buzz.</li>
-        <li><span>3</span><strong>Hydrate:</strong> Electrolytes keep the system balanced while you think.</li>
-        <li><span>4</span><strong>Resilience:</strong> Adaptogens help your brain stay in “get stuff done” mode.</li>
-      </ol>
-    </div>
-
-    <!-- Swap-this-for-that (fun, specific) -->
-    <div class="swap-grid">
-      <div class="swap-card">
-        <h4>Swap coffee ✖️</h4>
-        <ul>
-          <li>Fast peak → fast dip</li>
-          <li>Acidity + jitters</li>
-          <li>Needs brewing time</li>
-        </ul>
+  <section id="science" class="science-section">
+    <div class="container">
+  
+      <!-- Header -->
+      <div class="sc-header">
+        <span class="sc-badge">Science</span>
+        <h2 class="sc-title">
+          Backed by ingredients that <span class="gold">work</span>
+        </h2>
+        <p class="sc-sub">
+          Clean stimulation, steady focus, fewer jitters. Here’s the “why” behind Buzzbar — and how it’s different
+          from quick spikes and sugary fixes.
+        </p>
       </div>
-      <div class="swap-card">
-        <h4>Swap bananas ✖️</h4>
-        <ul>
-          <li>Great carbs, zero focus</li>
-          <li>Sticky backpack energy 😂</li>
-          <li>Not an actual snack plan</li>
-        </ul>
+  
+      <!-- Caffeine curve (illustrative) -->
+      <figure class="curve">
+        <svg viewBox="0 0 640 200" role="img" aria-label="Caffeine curves: coffee spike vs Buzzbar smooth">
+          <!-- grid -->
+          <path d="M48 20 V180 M48 180 H610" stroke="rgba(2,6,23,.12)" stroke-width="1"/>
+          <!-- labels -->
+          <text x="8" y="26" fill="#64748b" font-size="12">Energy</text>
+          <text x="560" y="196" fill="#64748b" font-size="12">Time →</text>
+  
+          <!-- Coffee spike -->
+          <path d="M48 175 C 120 70, 200 32, 270 80 S 380 175, 610 175"
+                fill="none" stroke="#ef4444" stroke-width="3" opacity=".9"/>
+          <circle cx="270" cy="80" r="3.5" fill="#ef4444"/>
+          <text x="278" y="78" fill="#ef4444" font-size="11">coffee spike</text>
+  
+          <!-- Buzzbar smooth -->
+          <defs>
+            <linearGradient id="buzzgrad" x1="0" y1="0" x2="1" y2="0">
+              <stop offset="0" stop-color="#8b5cf6"/>
+              <stop offset="1" stop-color="#22c55e"/>
+            </linearGradient>
+          </defs>
+          <path d="M48 175 C 120 150, 225 132, 320 120 S 520 135, 610 150"
+                fill="none" stroke="url(#buzzgrad)" stroke-width="4"/>
+          <text x="505" y="145" fill="#6d28d9" font-size="11">Buzzbar target curve</text>
+        </svg>
+        <figcaption>Illustrative curves: coffee can peak fast, then dip; Buzzbar aims for a steadier lift.</figcaption>
+      </figure>
+  
+      <!-- Ingredient cards -->
+      <div class="ing-grid">
+  
+        <article class="ing-card ing-lift" tabindex="0">
+          <div class="ing-eyebrow">Lift</div>
+          <h3>Green-tea Caffeine</h3>
+          <p>Steady focus from natural caffeine, without the sharp edge.</p>
+          <ul class="ing-facts">
+            <li><strong>Target per bar:</strong> ~<span class="mono">80 mg</span>*</li>
+            <li><strong>Source:</strong> green tea extract</li>
+            <li><strong>Reason:</strong> pairs well with L-theanine for calmer alertness</li>
+          </ul>
+          <details class="ing-evidence">
+            <summary>Evidence snapshot</summary>
+            <p>Moderate caffeine improves alertness and reaction time; when paired with L-theanine, studies report
+               better task accuracy and fewer jitters (varies by dose and individual).<span class="note">†</span></p>
+          </details>
+        </article>
+  
+        <article class="ing-card ing-smooth" tabindex="0">
+          <div class="ing-eyebrow">Smooth</div>
+          <h3>L-theanine</h3>
+          <p>Promotes calm alertness and smooths caffeine’s lift.</p>
+          <ul class="ing-facts">
+            <li><strong>Typical range:</strong> <span class="mono">100–200 mg</span></li>
+            <li><strong>Effect:</strong> supports attention with relaxed focus</li>
+          </ul>
+          <details class="ing-evidence">
+            <summary>Evidence snapshot</summary>
+            <p>Reviews note L-theanine increases alpha-wave activity (relaxed alertness). Combined with caffeine,
+               it may reduce perceived stress and improve attention switching.</p>
+          </details>
+        </article>
+  
+        <article class="ing-card ing-hydrate" tabindex="0">
+          <div class="ing-eyebrow">Hydrate</div>
+          <h3>Electrolytes</h3>
+          <p>Hydration supports cognition and endurance during long sessions.</p>
+          <ul class="ing-facts">
+            <li>Sodium • Potassium • Magnesium</li>
+            <li>Helps maintain fluid balance for mental stamina</li>
+          </ul>
+          <details class="ing-evidence">
+            <summary>Evidence snapshot</summary>
+            <p>Even mild dehydration can impair mood and focus; electrolyte balance helps prevent those dips.</p>
+          </details>
+        </article>
+  
+        <article class="ing-card ing-adapt" tabindex="0">
+          <div class="ing-eyebrow">Resilience</div>
+          <h3>Adaptogens</h3>
+          <p>Stress-support so focus actually sticks (e.g., rhodiola, ashwagandha).</p>
+          <ul class="ing-facts">
+            <li>Targets perceived fatigue and stress reactivity</li>
+            <li>Complements caffeine’s alertness with composure</li>
+          </ul>
+          <details class="ing-evidence">
+            <summary>Evidence snapshot</summary>
+            <p>Emerging research suggests some adaptogens reduce fatigue and support stress adaptation in healthy
+               adults; effects vary with dose and personal response.</p>
+          </details>
+        </article>
+  
       </div>
-      <div class="swap-card good">
-        <h4>Choose Buzzbar ✅</h4>
-        <ul>
-          <li>~80 mg caffeine + theanine</li>
-          <li>Hydration + adaptogens</li>
-          <li>Grab-and-go — no crash</li>
-        </ul>
+  
+      <!-- How it works -->
+      <div class="hiw">
+        <h3 class="hiw-title">How it works — the quick version</h3>
+        <ol class="hiw-steps">
+          <li><span>1</span><strong>Lift</strong>: natural caffeine wakes up adenosine-fog — no harsh spike.</li>
+          <li><span>2</span><strong>Smooth</strong>: L-theanine modulates the lift → calm focus, fewer jitters.</li>
+          <li><span>3</span><strong>Hydrate</strong>: electrolytes keep the system balanced while you think.</li>
+          <li><span>4</span><strong>Resilience</strong>: adaptogens help your brain stay in “get-stuff-done” mode.</li>
+        </ol>
       </div>
+  
+      <!-- More Qs (fun + human) -->
+      <div class="sc-faq">
+        <details>
+          <summary>Why green tea instead of coffee?</summary>
+          <p>Green tea has a gentler curve and plays nicely with L-theanine. Coffee’s great — we just wanted a
+             carry-anywhere option with fewer spikes and no brewing.</p>
+        </details>
+        <details>
+          <summary>When should I use Buzzbar?</summary>
+          <p>Morning classes, deep-work blocks, pre-meeting boosts, travel days. If caffeine-sensitive, start with half.</p>
+        </details>
+        <details>
+          <summary>Medical advice?</summary>
+          <p>No — this is food, not medicine. If pregnant, nursing, or managing a condition, talk to your clinician
+             before using caffeine or adaptogens.</p>
+        </details>
+      </div>
+  
+      <p class="sc-foot">
+        *Targets shown during pre-release and may change as we finalize the formula.
+        <span class="note">† Evidence snapshots are summary notes of published research; individual responses vary.</span>
+      </p>
+  
     </div>
+  </section>
 
-    <!-- Tiny FAQ (optional, feels human) -->
-    <details class="micro-faq">
-      <summary>Why green tea caffeine instead of coffee?</summary>
-      <p>Green tea brings a gentler curve, and pairing with theanine reduces the edge most people feel from coffee.</p>
-    </details>
-    <details class="micro-faq">
-      <summary>Can I still drink coffee?</summary>
-      <p>Totally. Buzzbar is for the days you want clean focus without brewing or buzzing.</p>
-    </details>
-  </div>
-</section>
 
   <!-- ===== TESTIMONIALS & COMPANY STATS ===== -->
   <section class="testimonials-section">
