--- a/index.html
+++ b/index.html
@@ -301,55 +301,6 @@
     </div>
   </section>
 
-
-  <!-- ===== TESTIMONIALS & COMPANY STATS ===== -->
-  <section class="testimonials-section">
-    <div class="container">
-      <div class="testimonials-grid">
-        <div class="testimonial-card featured">
-          <div class="testimonial-rating"><span class="stars">★★★★★</span></div>
-          <blockquote>Best pre-meeting snack. No jitters, no crash.</blockquote>
-          <div class="testimonial-author">
-            <div class="author-info">
-              <strong>Alex P.</strong>
-              <span>Founder</span>
-            </div>
-          </div>
-        </div>
-
-        <div class="testimonial-card">
-          <div class="testimonial-rating"><span class="stars">★★★★★</span></div>
-          <blockquote>The Focus bar actually helps me study.</blockquote>
-          <div class="testimonial-author">
-            <div class="author-info">
-              <strong>Sara L.</strong>
-              <span>Student</span>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="company-stats">
-        <div class="stat-item">
-          <span class="stat-number">10k+</span>
-          <span class="stat-label">Bars Tested</span>
-        </div>
-        <div class="stat-item">
-          <span class="stat-number">95%</span>
-          <span class="stat-label">Would Recommend</span>
-        </div>
-        <div class="stat-item">
-          <span class="stat-number">0</span>
-          <span class="stat-label">Artificial Sweeteners</span>
-        </div>
-        <div class="stat-item">
-          <span class="stat-number">100%</span>
-          <span class="stat-label">Plant-based</span>
-        </div>
-      </div>
-    </div>
-  </section>
-
   <!-- ===== NUTRITION ===== -->
   <section id="nutrition" class="container" style="padding:120px 0;">
     <div class="section-header">
@@ -427,7 +378,98 @@
     </div>
   </section>
 
+<!-- ===== SOCIAL PROOF / REVIEWS ===== -->
+<section id="proof" class="proof-section">
+  <div class="container">
 
+    <!-- Header -->
+    <div class="proof-head">
+      <span class="proof-badge">What people say</span>
+      <h2>Real reactions from early tasters</h2>
+      <p class="proof-sub">Light, honest quotes while we’re still in pre-release.</p>
+    </div>
+
+    <!-- Testimonials -->
+    <div class="testimonials">
+      <article class="t-card">
+        <div class="t-stars" aria-label="5 stars">
+          <svg viewBox="0 0 120 20" width="120" height="20" aria-hidden="true">
+            <defs><linearGradient id="gold" x1="0" y1="0" x2="1" y2="1">
+              <stop stop-color="#f59e0b"/><stop offset="1" stop-color="#fbbf24"/></linearGradient></defs>
+            <g fill="url(#gold)">
+              <path d="M10 1l2.6 6.6 7 0.5-5.3 4.4 1.7 6.5L10 15 4 19l1.7-6.5L.4 8.1l7-.5z"/>
+              <use href="#s" x="22"/><use href="#s" x="44"/><use href="#s" x="66"/><use href="#s" x="88"/>
+              <path id="s" d="M10 1l2.6 6.6 7 0.5-5.3 4.4 1.7 6.5L10 15 4 19l1.7-6.5L.4 8.1l7-.5z"/>
+            </g>
+          </svg>
+        </div>
+        <blockquote>“Best pre-meeting snack. No jitters, no crash.”</blockquote>
+        <footer>
+          <div class="who">
+            <span class="avatar">AP</span>
+            <div><strong>Alex P.</strong><small>Founder</small></div>
+          </div>
+        </footer>
+      </article>
+
+      <article class="t-card alt">
+        <div class="t-stars" aria-label="5 stars">
+          <svg viewBox="0 0 120 20" width="120" height="20" aria-hidden="true">
+            <defs><linearGradient id="gold2" x1="0" y1="0" x2="1" y2="1">
+              <stop stop-color="#f59e0b"/><stop offset="1" stop-color="#fbbf24"/></linearGradient></defs>
+            <g fill="url(#gold2)">
+              <path d="M10 1l2.6 6.6 7 0.5-5.3 4.4 1.7 6.5L10 15 4 19l1.7-6.5L.4 8.1l7-.5z"/>
+              <use href="#s2" x="22"/><use href="#s2" x="44"/><use href="#s2" x="66"/><use href="#s2" x="88"/>
+              <path id="s2" d="M10 1l2.6 6.6 7 0.5-5.3 4.4 1.7 6.5L10 15 4 19l1.7-6.5L.4 8.1l7-.5z"/>
+            </g>
+          </svg>
+        </div>
+        <blockquote>“The focus bar actually helps me study.”</blockquote>
+        <footer>
+          <div class="who">
+            <span class="avatar">SL</span>
+            <div><strong>Sara L.</strong><small>Student</small></div>
+          </div>
+        </footer>
+      </article>
+    </div>
+
+    <!-- Stat band (lightweight, non-claimy) -->
+    <div class="stat-band">
+      <div class="stat">
+        <div class="stat-num">Pre-release</div>
+        <div class="stat-label">In development</div>
+      </div>
+      <div class="stat">
+        <div class="stat-num">0</div>
+        <div class="stat-label">Artificial sweeteners</div>
+      </div>
+      <div class="stat">
+        <div class="stat-num">100%</div>
+        <div class="stat-label">Plant-based</div>
+      </div>
+      <div class="stat">
+        <div class="stat-num">EU</div>
+        <div class="stat-label">Made in Europe</div>
+      </div>
+    </div>
+
+    <!-- Value chips (subtle motion) -->
+    <div class="value-chips" aria-hidden="true">
+      <span>Green-tea caffeine</span>
+      <span>L-theanine</span>
+      <span>Electrolytes</span>
+      <span>Adaptogens</span>
+      <span>No crash</span>
+      <span>Vegan</span>
+      <span>Grab-and-go</span>
+    </div>
+
+  </div>
+</section>
+
+
+  
 <!-- ===== OUR STORY (polished) ===== -->
 <section id="our-story" class="our-story">
   <div class="container story-grid">
