--- a/index.html
+++ b/index.html
@@ -378,91 +378,55 @@
     </div>
   </section>
 
-<!-- ===== SOCIAL PROOF / REVIEWS ===== -->
-<section id="proof" class="proof-section">
+<!-- ===== SOCIAL PROOF (clean) ===== -->
+<section id="proof" class="sp-section">
   <div class="container">
 
-    <!-- Header -->
-    <div class="proof-head">
-      <span class="proof-badge">What people say</span>
+    <div class="sp-head">
+      <span class="sp-badge">What people say</span>
       <h2>Real reactions from early tasters</h2>
-      <p class="proof-sub">Light, honest quotes while we’re still in pre-release.</p>
+      <p class="sp-sub">Light, honest quotes while we’re still in pre-release.</p>
     </div>
 
     <!-- Testimonials -->
-    <div class="testimonials">
-      <article class="t-card">
-        <div class="t-stars" aria-label="5 stars">
-          <svg viewBox="0 0 120 20" width="120" height="20" aria-hidden="true">
-            <defs><linearGradient id="gold" x1="0" y1="0" x2="1" y2="1">
-              <stop stop-color="#f59e0b"/><stop offset="1" stop-color="#fbbf24"/></linearGradient></defs>
-            <g fill="url(#gold)">
-              <path d="M10 1l2.6 6.6 7 0.5-5.3 4.4 1.7 6.5L10 15 4 19l1.7-6.5L.4 8.1l7-.5z"/>
-              <use href="#s" x="22"/><use href="#s" x="44"/><use href="#s" x="66"/><use href="#s" x="88"/>
-              <path id="s" d="M10 1l2.6 6.6 7 0.5-5.3 4.4 1.7 6.5L10 15 4 19l1.7-6.5L.4 8.1l7-.5z"/>
-            </g>
-          </svg>
-        </div>
+    <div class="sp-grid">
+      <article class="sp-card">
+        <div class="sp-stars" aria-label="5 stars">★★★★★</div>
         <blockquote>“Best pre-meeting snack. No jitters, no crash.”</blockquote>
-        <footer>
-          <div class="who">
-            <span class="avatar">AP</span>
-            <div><strong>Alex P.</strong><small>Founder</small></div>
-          </div>
+        <footer class="sp-who">
+          <span class="sp-avatar">AP</span>
+          <div><strong>Alex P.</strong><small>Founder</small></div>
         </footer>
       </article>
 
-      <article class="t-card alt">
-        <div class="t-stars" aria-label="5 stars">
-          <svg viewBox="0 0 120 20" width="120" height="20" aria-hidden="true">
-            <defs><linearGradient id="gold2" x1="0" y1="0" x2="1" y2="1">
-              <stop stop-color="#f59e0b"/><stop offset="1" stop-color="#fbbf24"/></linearGradient></defs>
-            <g fill="url(#gold2)">
-              <path d="M10 1l2.6 6.6 7 0.5-5.3 4.4 1.7 6.5L10 15 4 19l1.7-6.5L.4 8.1l7-.5z"/>
-              <use href="#s2" x="22"/><use href="#s2" x="44"/><use href="#s2" x="66"/><use href="#s2" x="88"/>
-              <path id="s2" d="M10 1l2.6 6.6 7 0.5-5.3 4.4 1.7 6.5L10 15 4 19l1.7-6.5L.4 8.1l7-.5z"/>
-            </g>
-          </svg>
-        </div>
-        <blockquote>“The focus bar actually helps me study.”</blockquote>
-        <footer>
-          <div class="who">
-            <span class="avatar">SL</span>
-            <div><strong>Sara L.</strong><small>Student</small></div>
-          </div>
+      <article class="sp-card">
+        <div class="sp-stars" aria-label="5 stars">★★★★★</div>
+        <blockquote>“The Focus bar actually helps me study.”</blockquote>
+        <footer class="sp-who">
+          <span class="sp-avatar">SL</span>
+          <div><strong>Sara L.</strong><small>Student</small></div>
         </footer>
       </article>
     </div>
 
-    <!-- Stat band (lightweight, non-claimy) -->
-    <div class="stat-band">
-      <div class="stat">
-        <div class="stat-num">Pre-release</div>
-        <div class="stat-label">In development</div>
+    <!-- Stats band (safe, factual) -->
+    <div class="sp-band">
+      <div class="sp-stat">
+        <div class="sp-num">Pre-release</div>
+        <div class="sp-label">In development</div>
       </div>
-      <div class="stat">
-        <div class="stat-num">0</div>
-        <div class="stat-label">Artificial sweeteners</div>
+      <div class="sp-stat">
+        <div class="sp-num">0</div>
+        <div class="sp-label">Artificial sweeteners</div>
       </div>
-      <div class="stat">
-        <div class="stat-num">100%</div>
-        <div class="stat-label">Plant-based</div>
+      <div class="sp-stat">
+        <div class="sp-num">100%</div>
+        <div class="sp-label">Plant-based</div>
       </div>
-      <div class="stat">
-        <div class="stat-num">EU</div>
-        <div class="stat-label">Made in Europe</div>
+      <div class="sp-stat">
+        <div class="sp-num">EU</div>
+        <div class="sp-label">Made in Europe</div>
       </div>
-    </div>
-
-    <!-- Value chips (subtle motion) -->
-    <div class="value-chips" aria-hidden="true">
-      <span>Green-tea caffeine</span>
-      <span>L-theanine</span>
-      <span>Electrolytes</span>
-      <span>Adaptogens</span>
-      <span>No crash</span>
-      <span>Vegan</span>
-      <span>Grab-and-go</span>
     </div>
 
   </div>
