--- a/index.html
+++ b/index.html
@@ -302,81 +302,153 @@
   </section>
 
   <!-- ===== NUTRITION ===== -->
-  <section id="nutrition" class="container" style="padding:120px 0;">
-    <div class="section-header">
-      <span class="section-badge">Nutrition</span>
-      <h2>What’s inside</h2>
-      <p class="section-subtitle">Transparent facts for every bar.</p>
-    </div>
-
-    <button class="nutrition-toggle">
-      Energy Bar – Nutrition Facts
-      <span class="toggle-icon">▾</span>
-    </button>
-
-    <div class="nutrition-facts">
-      <h4>Nutrition Facts</h4>
-      <table>
-        <tr><td>Calories</td><td>190</td></tr>
-        <tr><td>Protein</td><td>10g</td></tr>
-        <tr><td>Carbohydrates</td><td>21g</td></tr>
-        <tr><td>Fat</td><td>7g</td></tr>
-      </table>
-      <p><strong>Ingredients:</strong> Oats, pea protein, green tea extract, electrolytes, almond butter.</p>
-      <hr/>
-      <div class="nutrition-grid">
-        <div class="nutrition-card">
-          <h3>Energy</h3>
-          <p>Smooth caffeine + theanine for balanced focus.</p>
-        </div>
-        <div class="nutrition-card">
-          <h3>Electrolytes</h3>
-          <p>Hydration support with sodium, potassium, magnesium.</p>
-        </div>
+  <section id="nutrition" class="nt-section">
+    <div class="container">
+  
+      <!-- Header -->
+      <div class="nt-head">
+        <span class="nt-badge">Nutrition</span>
+        <h2 class="nt-title">Smart fuel, simple label</h2>
+        <p class="nt-sub">
+          Built around balanced macros, steady energy, and ingredients you can pronounce — no artificial sweeteners,
+          no weird aftertaste.
+        </p>
       </div>
-
-      <div class="regulatory-info">
-        <h3>Important Info</h3>
-        <div class="warnings">
-          <p class="caffeine-warning"><strong>Contains caffeine.</strong> Not recommended for children or pregnant persons.</p>
+  
+      <!-- Macro snapshot -->
+      <div class="nt-macros">
+        <div class="nt-macro">
+          <div class="nt-circle nt-protein"><span>10g</span></div>
+          <div class="nt-m-label">Protein</div>
+          <p class="nt-m-copy">Satiating base for steady energy.</p>
+        </div>
+        <div class="nt-macro">
+          <div class="nt-circle nt-fiber"><span>5g</span></div>
+          <div class="nt-m-label">Fiber</div>
+          <p class="nt-m-copy">Helps fullness & gut friendliness.</p>
+        </div>
+        <div class="nt-macro">
+          <div class="nt-circle nt-sugar"><span>0g</span></div>
+          <div class="nt-m-label">Added Sugar</div>
+          <p class="nt-m-copy">Sweetness without crashes.</p>
+        </div>
+        <div class="nt-macro">
+          <div class="nt-circle nt-vegan"><span>100%</span></div>
+          <div class="nt-m-label">Plant-Based</div>
+          <p class="nt-m-copy">No dairy. No compromise.</p>
         </div>
       </div>
-    </div>
-
-    <!-- Coming-soon section (uses coming-soon-reviews + launch-stats) -->
-    <div class="coming-soon-reviews">
-      <div class="review-placeholder">
-        <span class="placeholder-icon">⭐</span>
-        <h3>Reviews coming soon</h3>
-        <p>Early testers are loving the flavor and steady energy.</p>
+  
+      <!-- Benefits grid (interactive) -->
+      <div class="nt-grid">
+        <article class="nt-card">
+          <div class="nt-eyebrow">Steady</div>
+          <h3>Low glycemic design</h3>
+          <p>Carbs + fiber + fats tuned to avoid the whiplash you get from syrupy snacks.</p>
+          <details class="nt-more">
+            <summary>How we approach it</summary>
+            <p>We aim for complex carbs and fiber to slow absorption, plus protein and fats to extend satiety—so energy
+               lasts instead of spiking.</p>
+          </details>
+        </article>
+  
+        <article class="nt-card">
+          <div class="nt-eyebrow">Clean</div>
+          <h3>No artificial sweeteners</h3>
+          <p>We avoid sucralose/acesulfame K/aspartame so the flavor stays natural.</p>
+          <details class="nt-more">
+            <summary>Sweetness strategy</summary>
+            <p>We combine low-GI sweeteners and flavor balance—no chemical aftertaste, no sugar crash.</p>
+          </details>
+        </article>
+  
+        <article class="nt-card">
+          <div class="nt-eyebrow">Functional</div>
+          <h3>Electrolytes + adaptogens</h3>
+          <p>Hydration + stress support so focus sticks when you need it most.</p>
+          <details class="nt-more">
+            <summary>What that means</summary>
+            <p>Sodium/potassium/magnesium for fluid balance; a thoughtful adaptogen blend for perceived stress and fatigue.</p>
+          </details>
+        </article>
+  
+        <article class="nt-card">
+          <div class="nt-eyebrow">Digestible</div>
+          <h3>Gut-friendly blend</h3>
+          <p>We keep fibers moderate and avoid heavy sugar alcohol loads.</p>
+          <details class="nt-more">
+            <summary>Why it matters</summary>
+            <p>Overdoing polyols can upset stomachs. We choose simpler routes for a bar you can actually study on.</p>
+          </details>
+        </article>
       </div>
-      <div class="review-placeholder">
-        <span class="placeholder-icon">🛒</span>
-        <h3>Retail partners</h3>
-        <p>We’re in talks with select stores — stay tuned.</p>
+  
+      <!-- Ingredient highlights -->
+      <div class="nt-highlights">
+        <div class="nt-hi-card">
+          <h4>Protein sources</h4>
+          <ul>
+            <li>Plant protein blend for complete AA profile</li>
+            <li>Balanced texture — not chalky</li>
+          </ul>
+        </div>
+        <div class="nt-hi-card">
+          <h4>Fats that work</h4>
+          <ul>
+            <li>Nut/seed-forward for flavor & satiety</li>
+            <li>Helps slow energy release</li>
+          </ul>
+        </div>
+        <div class="nt-hi-card">
+          <h4>Smart carbs</h4>
+          <ul>
+            <li>Complex carbs + fiber</li>
+            <li>Zero added sugar</li>
+          </ul>
+        </div>
       </div>
-      <div class="review-placeholder">
-        <span class="placeholder-icon">📦</span>
-        <h3>Subscribe & Save</h3>
-        <p>Subscriptions at launch with free shipping.</p>
+  
+      <!-- Nutrition label preview (stylized) -->
+      <div class="nt-facts-wrap">
+        <div class="nt-facts">
+          <header>Nutrition Facts (preview)</header>
+          <div class="nt-row"><span>Calories</span><strong>~210</strong></div>
+          <hr/>
+          <div class="nt-row"><span>Total Fat</span><strong>8g</strong></div>
+          <div class="nt-subrow"><span>— Saturated Fat</span><strong>1g</strong></div>
+          <div class="nt-row"><span>Sodium</span><strong>180mg</strong></div>
+          <div class="nt-row"><span>Total Carbohydrate</span><strong>22g</strong></div>
+          <div class="nt-subrow"><span>— Dietary Fiber</span><strong>5g</strong></div>
+          <div class="nt-subrow"><span>— Total Sugars</span><strong>5g</strong></div>
+          <div class="nt-row"><span>Protein</span><strong>10g</strong></div>
+          <footer>*Pre-release targets; values may change.</footer>
+        </div>
+        <div class="nt-facts-note">
+          <h4>Why this mix?</h4>
+          <p>Protein + fiber + smart carbs help you feel fueled, not sleepy. Add electrolytes & adaptogens, and you get
+             focus you can feel—without brewing or sugar bombs.</p>
+        </div>
       </div>
-    </div>
-
-    <div class="launch-stats">
-      <div class="stat-item">
-        <span class="stat-number">3</span>
-        <span class="stat-label">Flavors</span>
+  
+      <!-- FAQ (short) -->
+      <div class="nt-faq">
+        <details>
+          <summary>Allergens?</summary>
+          <p>Formulas are in development. We’ll clearly label any nuts, soy, or gluten exposure before launch.</p>
+        </details>
+        <details>
+          <summary>Vegan?</summary>
+          <p>Yes — all bars are planned to be 100% plant-based.</p>
+        </details>
+        <details>
+          <summary>When is nutrition finalized?</summary>
+          <p>We’re testing now. This page updates as we lock the recipe; sign up to get the final label at launch.</p>
+        </details>
       </div>
-      <div class="stat-item">
-        <span class="stat-number">2</span>
-        <span class="stat-label">Protein options</span>
-      </div>
-      <div class="stat-item">
-        <span class="stat-number">100%</span>
-        <span class="stat-label">Vegan</span>
-      </div>
+  
     </div>
   </section>
+
 
 <!-- ===== SOCIAL PROOF (clean) ===== -->
 <section id="proof" class="sp-section">
